--- a/assets/style/base.scss
+++ b/assets/style/base.scss
@@ -8,9 +8,9 @@
     --vt-c-indigo: #2c3e50;
     --vt-c-amaranth: #ed4956;
     --vt-c-silver: #ccc;
-    --vt-c-mariner: #287cc4;
+    --vt-c-mariner: rgb(9 105 218);
     --vt-c-accent: #00EE;
-    --vt-c-deep-accent: #551A8B;
+    --vt-c-deep-accent: #681da8;
     --vt-c-fruit-salad: #4caf50;
     --vt-c-divider-light-1: rgb(60 60 60 / 29%);
     --vt-c-divider-light-2: rgb(60 60 60 / 12%);
