カラー定義を一新

--- a/components/ui-parts/data-entry/input/InputSearch/style.scss
+++ b/components/ui-parts/data-entry/input/InputSearch/style.scss
@@ -13,9 +13,9 @@
       right: 0;
       width: 40px;
       height: 100%;
-      color: var(--vt-c-white);
+      color: var(--color-light-text);
       cursor: pointer;
-      background-color: var(--vt-c-mariner);
+      background-color: var(--color-primary);
       border-radius: 0 8px 8px 0;
 
       &:hover {
