--- a/assets/style/base.scss
+++ b/assets/style/base.scss
@@ -12,38 +12,43 @@
     --vt-c-accent: #00EE;
     --vt-c-deep-accent: #681da8;
     --vt-c-fruit-salad: #4caf50;
-    --vt-c-divider-light-1: rgb(60 60 60 / 29%);
-    --vt-c-divider-light-2: rgb(60 60 60 / 12%);
-    --vt-c-divider-dark-1: rgb(84 84 84 / 65%);
-    --vt-c-divider-dark-2: rgb(84 84 84 / 48%);
-    --vt-c-text-light-1: var(--vt-c-indigo);
-    --vt-c-text-light-2: rgb(60 60 60 / 66%);
-    --vt-c-text-dark-1: var(--vt-c-white);
-    --vt-c-text-dark-2: #F2F2F2;
-    --vt-c-text-dark-3: rgb(235 235 235 / 64%);
+    --vt-c-gray-5: #f9fafa;
+    --vt-c-gray-10: #f5f6f6;
+    --vt-c-gray-20: #edeeee;
+    --vt-c-gray-30: #dfe0e0;
+    --vt-c-gray-40: #bcbdbd;
+    --vt-c-gray-50: #9c9e9e;
+    --vt-c-gray-60: #7a7d7d;
+    --vt-c-gray-70: #5e6060;
+    --vt-c-gray-80: #494b4b;
+    --vt-c-gray-90: #3a3c3c;
+    --vt-c-gray-100: #2f3232;
+    --vt-c-gray-110: #1d2020;
 
     /* semantic color variables for this project */
+    --color-primary: var(--vt-c-mariner);
+    --color-link-visited: var(--vt-c-deep-accent);
     --color-background: var(--vt-c-white);
     --color-background-soft: var(--vt-c-white-soft);
     --color-background-mute: var(--vt-c-white-mute);
-    --color-background-tag: var(--vt-c-text-dark-3);
-    --color-background-tag-hover: var(--vt-c-text-dark-2);
-    --color-background-snippet: var(--vt-c-text-dark-2);
-    --color-border: var(--vt-c-divider-light-2);
-    --color-border-hover: var(--vt-c-divider-light-1);
-    --color-heading: var(--vt-c-text-light-1);
-    --color-text: var(--vt-c-text-light-1);
+    --color-background-tag: var(--vt-c-gray-30);
+    --color-background-tag-hover: var(--vt-c-gray-20);
+    --color-background-snippet: var(--vt-c-gray-20);
+    --color-border: var(--vt-c-gray-30);
+    --color-heading: var(--vt-c-indigo);
+    --color-text: var(--vt-c-indigo);
+    --color-light-text: var(--vt-c-white);
     --section-gap: 160px;
 }
 
 html {
     height: 100%;
     font-family: Kosugi, sans-serif;
-    color: var(--vt-c-text-light-1)
+    color: var(--color-text)
 }
 
 a {
-    color: var(--vt-c-mariner);
+    color: var(--color-primary);
     text-decoration: none;
 
     &:hover {
@@ -51,7 +56,7 @@ a {
     }
 
     &:visited {
-        color: var(--vt-c-deep-accent);
+        color: var(--color-link-visited);
     }
 }
 
