layout に header を追加

--- a/assets/style/base.scss
+++ b/assets/style/base.scss
@@ -44,7 +44,7 @@
 html {
     height: 100%;
     font-family: Kosugi, sans-serif;
-    color: var(--color-text)
+    color: var(--color-text);
 }
 
 a {
