--- a/components/ui-parts/data-entry/input/InputSearch/style.scss
+++ b/components/ui-parts/data-entry/input/InputSearch/style.scss
@@ -3,9 +3,21 @@
 
     &__input {
       width: 100%;
-      padding: 8px 56px 8px 16px;
+      font-size: 16px;
       border: 1px solid var(--color-border);
       border-radius: 8px;
+
+      &--small {
+        padding: 4px 56px 4px 16px;
+      }
+
+      &--medium {
+        padding: 8px 56px 8px 16px;
+      }
+
+      &--large {
+        padding: 12px 56px 12px 16px;
+      }
     }
 
     &__button {
