メインアイコンを変更

--- a/assets/style/base.scss
+++ b/assets/style/base.scss
@@ -26,6 +26,7 @@
     --vt-c-gray-110: #1d2020;
 
     /* semantic color variables for this project */
+    --color-main: var(--vt-c-fruit-salad);
     --color-primary: var(--vt-c-mariner);
     --color-link-visited: var(--vt-c-deep-accent);
     --color-background: var(--vt-c-white);
