--- a/components/layout-contents/LayoutHeader/style.scss
+++ b/components/layout-contents/LayoutHeader/style.scss
@@ -15,6 +15,12 @@
     }
   }
 
+  &__icon {
+    width: 24px;
+    height: 24px;
+    color: var(--color-main);
+  }
+
   &__link-text {
     padding-left: 8px;
   }
