--- a/components/page-contents/articles/zenn/Container/style.scss
+++ b/components/page-contents/articles/zenn/Container/style.scss
@@ -1,11 +1,3 @@
-.body {
+.articles-container {
   width: 100%;
-
-  &__list {
-    margin: 16px 0;
-  }
-
-  &__list-item {
-    margin: 16px 0;
-  }
 }
