コンポーネント分割対応

--- a/components/page-contents/articles/qiita/ListItem/style.scss
+++ b/components/page-contents/articles/qiita/ListItem/style.scss
@@ -44,14 +44,6 @@
   &__tag-item {
     position: relative;
     z-index: 1;
-    padding: 4px 8px;
-    background-color: var(--color-background-tag);
-    border: 1px solid var(--color-border);
-    border-radius: 8px;
-
-    &:hover {
-      background-color: var(--color-background-tag-hover);
-    }
   }
 
   &__tag-link {
@@ -59,6 +51,10 @@
 
     &:hover {
       text-decoration: none;
+    }
+
+    &:visited {
+      color: var(--color-text);
     }
   }
 
