スタイルの調整

--- a/components/page-contents/articles/zenn/ListItem/style.scss
+++ b/components/page-contents/articles/zenn/ListItem/style.scss
@@ -46,10 +46,14 @@
     font-size: 12px;
   }
 
+  &__title {
+    margin-bottom: 8px;
+    font-size: 100%;
+  }
+
   &__number {
     display: flex;
     align-items: center;
-    margin-top: 8px;
   }
 
   &__icon {
