--- a/components/page-contents/articles/qiita/ListItem/style.scss
+++ b/components/page-contents/articles/qiita/ListItem/style.scss
@@ -35,9 +35,14 @@
     font-size: 12px;
   }
 
+  &__title {
+    font-size: 100%;
+  }
+
   &__tag-list {
     display: flex;
     gap: 16px;
+    margin-bottom: 8px;
     list-style: none;
   }
 
@@ -61,7 +66,6 @@
   &__number {
     display: flex;
     align-items: center;
-    margin-top: 8px;
   }
 
   &__icon {
