--- a/components/page-contents/top/Container/style.scss
+++ b/components/page-contents/top/Container/style.scss
@@ -1,26 +1,20 @@
 .top-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+}
+
+.body {
+  &__title {
+    margin-bottom: 24px;
   }
-  
-  .body {
-    &__title {
-      margin: 16px 0;
-    }
-  
-    &__link-list {
-      padding-top: 8px;
-      padding-left: 20px;
-    }
-  
-    &__link-item {
-      margin: 8px 0;
-    }
-  
-    &__search-form {
-      width: 100%;
-      margin-top: 24px;
-    }
+
+  &__link-list {
+    padding-left: 20px;
   }
+
+  &__link-item {
+    margin-bottom: 8px;
+  }
+}
