--- a/components/ui-parts/data-display/InfiniteScrollList/style.scss
+++ b/components/ui-parts/data-display/InfiniteScrollList/style.scss
@@ -1,8 +1,8 @@
 .infinite-scroll-list {
   overflow-y: scroll;
 
-  &__only-text {
-    display: inline-block;
+  &__empty {
+    width: 100%;
   }
 
   &__spinner {
