--- a/components/page-contents/top/Container/style.scss
+++ b/components/page-contents/top/Container/style.scss
@@ -1,13 +1,25 @@
 .top-container {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   height: 100%;
-}
 
-.body {
   &__title {
+    display: flex;
+    align-items: center;
     margin-bottom: 24px;
+  }
+
+  &__title-icon {
+    width: 32px;
+    height: 32px;
+    color: var(--color-main);
+  }
+
+  &__title-text {
+    display: inline-block;
+    margin-left: 16px;
   }
 
   &__link-list {
