img のスタイルを修正

--- a/components/page-contents/articles/zenn/ListItem/style.scss
+++ b/components/page-contents/articles/zenn/ListItem/style.scss
@@ -4,7 +4,12 @@
   }
 
   &__img {
+    position: relative;
+    display: block;
+    width: 32px;
+    height: 32px;
     border-radius: 50%;
+    object-fit: contain;
   }
 
   &__description {
