--- a/components/page-contents/articles/qiita/ListItem/style.scss
+++ b/components/page-contents/articles/qiita/ListItem/style.scss
@@ -1,6 +1,11 @@
 .list-item {
   &__img {
+    position: relative;
+    display: block;
+    width: 32px;
+    height: 32px;
     border-radius: 50%;
+    object-fit: contain;
   }
 
   &__description {
