スペルミスの修正

--- a/components/ui-parts/feedback/Spinner/style.scss
+++ b/components/ui-parts/feedback/Spinner/style.scss
@@ -6,12 +6,12 @@
     height: 16px;
   }
 
-  &--defalut {
+  &--default {
     width: 24px;
     height: 24px;
   }
 
-  &--default {
+  &--large {
     width: 32px;
     height: 32px;
   }
