note 記事ページ作成

--- a/assets/style/_base.scss
+++ b/assets/style/_base.scss
@@ -12,6 +12,7 @@
     --vt-c-accent: #00EE;
     --vt-c-deep-accent: #681da8;
     --vt-c-fruit-salad: #4caf50;
+    --vt-c-custom-accent: #238f76;
     --vt-c-gray-5: #f9fafa;
     --vt-c-gray-10: #f5f6f6;
     --vt-c-gray-20: #edeeee;
@@ -39,6 +40,7 @@
     --color-heading: var(--vt-c-indigo);
     --color-text: var(--vt-c-indigo);
     --color-light-text: var(--vt-c-white);
+    --color-custom-accent: var(--vt-c-custom-accent);
     --section-gap: 160px;
 }
 
