--- a/components/page-contents/articles/zenn/ListItem/style.scss
+++ b/components/page-contents/articles/zenn/ListItem/style.scss
@@ -1,5 +1,9 @@
 .list-item {
+  padding: 16px;
+
   &__large_text {
+    display: inline-block;
+    padding: 0 32px 0 16px;
     font-size: 40px;
   }
 
