--- a/components/ui-parts/data-display/ListDetail/style.scss
+++ b/components/ui-parts/data-display/ListDetail/style.scss
@@ -11,6 +11,19 @@
     line-height: 1.5;
   }
 
+  &__description-wrapper {
+    width: 100%;
+    overflow: hidden;
+  }
+
+  &__description {
+    display: -webkit-box;
+    font-size: 16px;
+    line-height: 1.5;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+  }
+
   &__footer {
     font-size: 12px;
   }
