--- a/components/page-contents/articles/note/Container/style.scss
+++ b/components/page-contents/articles/note/Container/style.scss
@@ -1,4 +1,4 @@
-.qiita-articles-container {
+.note-articles-container {
   width: 100%;
 
   &__title {
@@ -11,4 +11,3 @@
     margin-left: 8px;
   }
 }
-
